<resources>
    <string name="app_name">Items</string>
    <string name="lblID">Cédula</string>
    <string name="lblNom">Nombre</string>
    <string name="lblSex">Sexo</string>
    <string name="lblFecN">Nacido</string>
    <string name="lblFeme">Femenino</string>
    <string name="lblMasc">Masculino</string>
    <string name="btnAcep">Aceptar</string>
    <string name="lblNac">Nacido</string>
</resources>